- fixed scrollbar

--- a/custom.css
+++ b/custom.css
@@ -1077,8 +1077,9 @@ ts-jumper ts-jumper-container {
 { 
 	color: var(--text);
 }
+
 .token {
-	background-color: var(--background-elevated);
+	background-color: var(--background-elevated) !important;
 }
 .c-search_modal .popover>div { background-color: var(--background); }
 
@@ -1136,8 +1137,7 @@ ts-jumper ts-jumper-container {
 }
 
 /* channel detail view */
-#details_tab .feature_sli_channel_insights .channel_created_section .creator_link, #details_tab .feature_sli_channel_insights .channel_purpose_section .channel_purpose_text,
-.c-team__display-name, .c-unified_member__display-name, .c-usergroup__handle {
+#details_tab .feature_sli_channel_insights .channel_created_section .creator_link, #details_tab .feature_sli_channel_insights .channel_purpose_section .channel_purpose_text, .c-team__display-name, .c-unified_member__display-name, .c-usergroup__handle
 {
     color: var(--text);
 }
@@ -1149,7 +1149,8 @@ ts-jumper ts-jumper-container {
 .c-file_container--gradient:after {
     background: linear-gradient(180deg,hsla(0,0%,100%,0),var(--background));
 }
-. c-message_attachment {
+
+.c-message_attachment {
     color: var(--text-bright);
 }
 
@@ -1177,4 +1178,9 @@ nav {
 /* history loading */
 .p-degraded_list__loading {
     background: var(--background-elevated);
+}
+/* scrollbar */
+.c-scrollbar__bar {
+    background: var(--scrollbar-background);
+	border: 1px solid var(--scrollbar-border);
 }
